# imgui-glfw-glad-startup

./: .gitignore  .gitmodules  CMakeLists.txt  CMakelists.txt  INSTALL  INSTALL_MINGW  README.md  build  imgui.ini  main.cpp
modules/: CMakeLists.txt  CMakelists.txt
sources/: CMakeLists.txt  cv_video.h  imgui_demo.cpp  imgui_demo.h
sources/shaders/: fragment.vs  shader.vs
src/: .gitignore  CMakeLists.txt  cv_video.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  main.cpp
